--- a/bin/ventanas/PantallaCargaCartas.fxml
+++ b/bin/ventanas/PantallaCargaCartas.fxml
@@ -16,14 +16,14 @@
             <Image url="@../imagenes/carga.jpg" />
          </image>
       </ImageView>
-      <TextArea fx:id="comicsCarga" cacheShape="false" centerShape="false" editable="false" focusTraversable="false" layoutX="15.0" layoutY="6.0" prefHeight="239.0" prefWidth="491.0" scaleShape="false" wrapText="true">
+      <TextArea fx:id="cartasCarga" cacheShape="false" centerShape="false" editable="false" focusTraversable="false" layoutX="15.0" layoutY="6.0" prefHeight="239.0" prefWidth="491.0" scaleShape="false" wrapText="true">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
          <font>
             <Font name="Comic Sans MS" size="14.0" />
          </font></TextArea>
-      <ProgressBar fx:id="cargaComics" layoutX="15.0" layoutY="249.0" prefHeight="18.0" prefWidth="491.0" progress="0.0" />
+      <ProgressBar fx:id="cargaCartas" layoutX="15.0" layoutY="249.0" prefHeight="18.0" prefWidth="491.0" progress="0.0" />
       <Label fx:id="porcentajeCarga" layoutX="252.0" layoutY="271.0" text="0%" />
    </children>
 </Pane>
