--- a/src/ventanas/MenuPrincipal.fxml
+++ b/src/ventanas/MenuPrincipal.fxml
@@ -149,7 +149,7 @@
               <VBox fx:id="vboxContenido" layoutX="35.0" layoutY="1.0" prefHeight="337.0" prefWidth="241.0">
                <children>
             		
-                                            <ImageView fx:id="imagencomic" fitHeight="337.0" fitWidth="244.0" onMouseClicked="#ampliarImagen" pickOnBounds="true" preserveRatio="true" />
+                                            <ImageView fx:id="imagenCarta" fitHeight="337.0" fitWidth="244.0" onMouseClicked="#ampliarImagen" pickOnBounds="true" preserveRatio="true" />
                </children>
               </VBox>
       		        <VBox fx:id="vboxImage" layoutX="297.0" layoutY="1.0" prefHeight="337.0" prefWidth="293.0">
