--- a/src/ventanas/MenuPrincipal.fxml
+++ b/src/ventanas/MenuPrincipal.fxml
@@ -57,7 +57,7 @@
 				</Menu>
 			</menus>
 		</MenuBar>
-                <VBox fx:id="comboboxVbox" layoutX="4.0" layoutY="30.0" prefHeight="346.0" prefWidth="271.0" spacing="7" AnchorPane.bottomAnchor="374.0" AnchorPane.topAnchor="30.0">
+                <VBox fx:id="comboboxVbox" layoutX="4.0" layoutY="30.0" prefHeight="295.0" prefWidth="271.0" spacing="7" AnchorPane.bottomAnchor="425.0" AnchorPane.topAnchor="30.0">
             <children>
 
 		<Label layoutX="16.0" layoutY="33.0" prefHeight="25.0" prefWidth="49.0" style="-fx-background-color: grey;" stylesheets="@../style/genericos_style.css" text="General" wrapText="true">
@@ -112,7 +112,7 @@
             </Label>
 		            </children>
         </VBox>
-        <VBox fx:id="rootVBox" layoutY="377.0" onMouseClicked="#cambiarTamanioTable" prefHeight="356.0" prefWidth="1212.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+        <VBox fx:id="rootVBox" layoutY="377.0" onMouseClicked="#cambiarTamanioTable" prefHeight="429.0" prefWidth="1212.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
 			<children>
             <Rectangle fx:id="barraCambioAltura" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="5.0" stroke="BLACK" strokeType="INSIDE" width="1214.0" />
                 <TableView fx:id="tablaBBDD" onKeyPressed="#teclasDireccion" onMouseClicked="#clickRaton" prefHeight="359.0" prefWidth="1212.0" stylesheets="@../style/tablas_style.css" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
@@ -144,17 +144,17 @@
 		<Button fx:id="botonbbdd" layoutX="231.0" layoutY="72.0" mnemonicParsing="false" onAction="#verTodabbdd" prefHeight="35.0" prefWidth="90.0" stylesheets="@../style/genericos_style.css" text="Ver todo" />
 		<Button fx:id="botonMostrarParametro" alignment="CENTER" contentDisplay="BOTTOM" layoutX="231.0" layoutY="116.0" mnemonicParsing="false" onAction="#mostrarPorParametro" prefHeight="35.0" prefWidth="90.0" stylesheets="@../style/genericos_style.css" text="Busqueda" />
       <Label fx:id="alarmaConexionInternet" layoutX="1187.0" prefHeight="25.0" prefWidth="23.0" stylesheets="@../style/alarma_conexion_style.css" AnchorPane.rightAnchor="2.0" />
-      <AnchorPane fx:id="anchoPaneInfo" layoutX="610.0" layoutY="31.0" prefHeight="339.0" prefWidth="593.0" AnchorPane.rightAnchor="9.0">
+      <AnchorPane fx:id="anchoPaneInfo" layoutX="610.0" layoutY="31.0" prefHeight="276.0" prefWidth="593.0" AnchorPane.rightAnchor="9.0">
          <children>
-              <VBox fx:id="vboxContenido" layoutX="35.0" layoutY="1.0" prefHeight="337.0" prefWidth="241.0">
+              <VBox fx:id="vboxContenido" layoutX="35.0" layoutY="1.0" prefHeight="263.0" prefWidth="244.0">
                <children>
             		
-                                            <ImageView fx:id="imagenCarta" fitHeight="337.0" fitWidth="244.0" onMouseClicked="#ampliarImagen" pickOnBounds="true" preserveRatio="true" />
+                                            <ImageView fx:id="imagenCarta" fitHeight="273.0" fitWidth="244.0" onMouseClicked="#ampliarImagen" pickOnBounds="true" />
                </children>
               </VBox>
-      		        <VBox fx:id="vboxImage" layoutX="297.0" layoutY="1.0" prefHeight="337.0" prefWidth="293.0">
+      		        <VBox fx:id="vboxImage" layoutX="300.0" layoutY="1.0" prefHeight="283.0" prefWidth="290.0">
                <children>
-                      <TextArea fx:id="prontInfo" editable="false" opacity="0.0" prefHeight="351.0" prefWidth="293.0" stylesheets="@../style/panel_info_style.css" wrapText="true" />
+                      <TextArea fx:id="prontInfo" editable="false" opacity="0.0" prefHeight="299.0" prefWidth="293.0" stylesheets="@../style/panel_info_style.css" wrapText="true" />
                </children>
               </VBox>
          </children>
@@ -166,7 +166,7 @@
          </font></Button>
       <Button fx:id="botonEliminar" layoutX="340.0" layoutY="116.0" mnemonicParsing="false" onAction="#accionCarta" prefHeight="35.0" prefWidth="90.0" stylesheets="@../style/genericos_style.css" text="Eliminar Carta" />
       <Button fx:id="botonImprimir" layoutX="290.0" layoutY="337.0" mnemonicParsing="false" onAction="#imprimirResultado" prefHeight="21.0" prefWidth="53.0" stylesheets="@../style/genericos_style.css" text="Imprimir" textAlignment="CENTER" visible="false" wrapText="true" />
-      <Button fx:id="botonGuardarResultado" layoutX="231.0" layoutY="337.0" mnemonicParsing="false" onAction="#guardarResultado" prefHeight="13.0" prefWidth="53.0" stylesheets="@../style/genericos_style.css" text="Guardar" textAlignment="CENTER" visible="false" wrapText="true" />
+      <Button fx:id="botonGuardarResultado" layoutX="231.0" layoutY="281.0" mnemonicParsing="false" onAction="#guardarResultado" prefHeight="13.0" prefWidth="53.0" stylesheets="@../style/genericos_style.css" text="Guardar" textAlignment="CENTER" visible="false" wrapText="true" />
       <Button fx:id="botonMostrarGuardados" alignment="CENTER" contentDisplay="BOTTOM" layoutX="231.0" layoutY="158.0" mnemonicParsing="false" onAction="#comicsGuardados" prefHeight="35.0" prefWidth="90.0" stylesheets="@../style/genericos_style.css" text="Ver Guardados" visible="false">
          <font>
             <Font size="11.0" />
