--- a/bin/ventanas/AccesoBBDD.fxml
+++ b/bin/ventanas/AccesoBBDD.fxml
@@ -17,22 +17,12 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="452.0" prefWidth="268.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controladores.AccesoBBDDController">
    <children>
-      <ToggleButton fx:id="toggleEye" layoutX="189.0" layoutY="253.0" mnemonicParsing="false" />
-      <ImageView fitHeight="155.0" fitWidth="271.0" layoutY="306.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="452.0" fitWidth="268.0" pickOnBounds="true">
          <image>
-            <Image url="@../imagenes/azul.jpg" />
+            <Image url="@../imagenes/accesoWeb.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="155.0" fitWidth="271.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../imagenes/rojo.jpg" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="295.0" fitWidth="271.0" layoutY="141.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../imagenes/Fondo%20AccederBBDD.jpg" />
-         </image>
-      </ImageView>
+      <ToggleButton fx:id="toggleEye" layoutX="189.0" layoutY="253.0" mnemonicParsing="false" visible="false" />
       <Button fx:id="botonAccesobbdd" layoutX="18.0" layoutY="351.0" mnemonicParsing="false" onAction="#entrarMenu" prefHeight="80.0" prefWidth="235.0" style="-fx-font-size: 20;" stylesheets="@../style/acces_style.css" text="Entrar al menu">
          <font>
             <Font size="18.0" />
