--- a/bin/ventanas/PantallaCargaCartas.fxml
+++ b/bin/ventanas/PantallaCargaCartas.fxml
@@ -11,9 +11,9 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="291.0" prefWidth="518.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controladores.CargaCartasController">
    <children>
-      <ImageView fitHeight="293.0" fitWidth="532.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="293.0" fitWidth="518.0" pickOnBounds="true">
          <image>
-            <Image url="@../imagenes/carga.jpg" />
+            <Image url="@../imagenes/CargaComics.jpg" />
          </image>
       </ImageView>
       <TextArea fx:id="cartasCarga" cacheShape="false" centerShape="false" editable="false" focusTraversable="false" layoutX="15.0" layoutY="6.0" prefHeight="239.0" prefWidth="491.0" scaleShape="false" wrapText="true">
