--- a/bin/style/panel_info_style.css
+++ b/bin/style/panel_info_style.css
@@ -2,7 +2,7 @@
     -fx-background-color: #F7F7F7;
     -fx-border-color: transparent;
     -fx-padding: 4;
-    -fx-font-family: "Comic Sans MS", cursive;
+    -fx-font-family: "Carta Sans MS", cursive;
     -fx-font-size: 14px;
     -fx-text-fill: #283747;
     -fx-effect: dropshadow( gaussian , rgba(255,20,147,0.3) , 2, 0, 0, 1 );
